[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
{name = "Vinicius Alencar",email = "vsslviniciussousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
